[metadata]
name = online-neural-cdes
author = Anonymous
author-email = anon@anon.anon
version = 0.0.2
summary = Neural Controlled Differential Equations for Online Prediction Tasks
licence = MIT
description-file =
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = >=3.8

[files]
packages =
    src

[flake8]
# Default flake8 3.5 ignored flags
ignore = E121, E123, E126, E226, E24, E704, W503, W504
exclude = .git,*migrations*
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203
